chore: enhance notification logic in NotificationServiceImpl to use RideRequestDriverAttemptRepository